fix navbar menus z-index

--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ nav .page-links a.active::before{
     opacity: 0;
     transition: all ease-in-out .5s;
     visibility: hidden;
+    z-index: 2;
 }
 .account-links .account ul li{
     width: 100%;
@@ -280,6 +281,7 @@ nav .page-links a.active::before{
     background-color: var(--black-20);
     width: 23vw;
     padding: 2rem 1.5rem 3rem;
+    z-index: 2;
 }
 .account-links .cart ul {
     display: flex;
